2022-02-10  Julien Bect  <julien.bect@centralesupelec.fr>

	run-tests.yml: Test Octage package tarball on ubuntu-latest

	* .github/workflows/run-tests.yml: Test Octage package tarball on
	Ubuntu latest.

2022-02-05  Julien Bect  <julien.bect@centralesupelec.fr>

	Rename github action: run-unit-tests.yml -> run-tests.yml

	* .github/workflows/run-unit-tests.yml: Rename from.
	* .github/workflows/run-tests.yml: Rename to.
	* README.md: Update badge.

	build_octpkg.m: Exclude misc/mole entirely

	* admin/build_tools/build_octpkg.m: Exclude misc/mole entirely.
	* admin/octpkg/patches/stk-init-mole-delete.patch: Simplify patch.

	startup.m: Run stk_init automatically for in-place use

	* startup.m: New script that runs stk_init automatically for
	in-place use.
	* admin/build_tools/build_octpkg.m: Do not include startup.m in
	the Octave package release.
	* NEWS.md: Advertise new script.

2022-02-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove old (hg) release instructions

	* admin/RELEASE.md: Deleted

2022-02-03  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_predict_leaveoneout.m: Avoid complex-valued norm_res

	* model/@stk_model_gpposterior/stk_predict_leaveoneout.m: Prevent
	norm_res from being complex-valued by cancelling negative elements
	in dR.

	stk_plot_histnormres.m: Ensure non-zero binsize

	* utils/stk_plot_histnormres.m: Introduce a safety net for samples
	with small (possibly zero) IQR.

2022-01-31  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_histnormres.m: Ensure non-zero number of bins

	* utils/stk_plot_histnormres.m: Make sure that we have a non-zero
	number of bins using Sturges' rule.

2022-01-28  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove the MOLE from the Octave package entirely

	* stk_init.m: Update comments.
	* admin/octpkg/patches/stk-init-mole-cleanup.patch: Rename from.
	* admin/octpkg/patches/stk-init-mole-delete.patch: Rename to.
	Delete everything related to the MOLE inside stk_init.