@@ -1,3 +1,10 @@
+2022-02-11  Julien Bect  <julien.bect@centralesupelec.fr>
+
+	run-tests.yml: Test the all purpose release on ubuntu-latest
+
+	* .github/workflows/run-tests.yml: Test the all purpose release on
+	ubuntu-latest
+
 2022-02-10  Julien Bect  <julien.bect@centralesupelec.fr>
 
 	run-tests.yml: Test Octage package tarball on ubuntu-latest
